Added Blank Stones as separate items from Active Stones

--- a/src/main/resources/assets/recallstones/lang/en_US.lang
+++ b/src/main/resources/assets/recallstones/lang/en_US.lang
@@ -1,5 +1,7 @@
 itemGroup.recallTab=Recall Stones
 item.recallStone.name=Recall Stone
+item.recallStoneBlank.name=Recall Stone
 item.playerEssence.name=Player Essence
 item.dimensionStone.name=Dimensional Stone
+item.dimensionStoneBlank.name=Dimension Stone
 item.followingStone.name=Following Stone
